--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "halacious": "^3.0.0",
     "hapi": "^8.0.0",
     "mschema": "^0.5.5",
+    "nedb": "^1.0.1",
     "pluralize": "^1.1.0",
     "underscore": "^1.7.0"
   },
