--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "halacious": "^3.0.0",
     "hapi": "^8.0.0",
     "hapi-resourceful-routes": "0.0.6",
+    "mongojs": "^0.18.1",
     "mschema": "^0.5.5",
     "nedb": "^1.0.1",
     "pluralize": "^1.1.0",
