Sanitized resources and error handling

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "json-prune": "^1.0.1",
     "mongojs": "^2.3.0",
     "restify": "^4.0.4",
+    "tingodb": "^0.4.2",
     "underscore": "^1.8.3"
   },
   "devDependencies": {
