Added transitive dependencies used in the code for it to work in older node versions

--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "dependencies": {
     "angular": "^1.2.0",
     "angular-hypermedia": "^0.7.4",
+    "linkheader-parser": "^0.1.2",
+    "mediatype-parser": "^0.1.2",
     "bunyan": "^1.5.1",
     "grunt-cli": "^0.1.13",
     "hal": "^0.1.0",
