--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comp-pool",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Rest service (and corresponding client) for computation jobs",
   "author": "Pedro Montoto García <pmgberm@gmail.com>",
   "main": "index.js",
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "node server.js start",
     "stop": "pkill --signal SIGINT comp-pool",
-    "test": "standard && grunt test"
+    "test": "standard && cross-env NODE_ENV=test grunt test"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,13 @@
   "dependencies": {
     "angular": "^1.2.0",
     "angular-hypermedia": "^0.7.4",
-    "linkheader-parser": "^0.1.2",
-    "mediatype-parser": "^0.1.2",
     "bunyan": "^1.5.1",
+    "cross-env": "^1.0.7",
     "grunt-cli": "^0.1.13",
     "hal": "^0.1.0",
     "json-prune": "^1.0.1",
+    "linkheader-parser": "^0.1.2",
+    "mediatype-parser": "^0.1.2",
     "mongojs": "^2.3.0",
     "restify": "^4.0.4",
     "tingodb": "^0.4.2",
