Started test suite

--- a/package.json
+++ b/package.json
@@ -27,21 +27,23 @@
   "dependencies": {
     "angular": "^1.2.0",
     "angular-hypermedia": "^0.7.4",
+    "angular-mocks": "^1.5.0",
     "bunyan": "^1.5.1",
     "cross-env": "^1.0.7",
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
+    "grunt-contrib-jasmine": "^1.0.0",
     "hal": "^0.1.0",
     "json-prune": "^1.0.1",
     "linkheader-parser": "^0.1.2",
     "mediatype-parser": "^0.1.2",
     "mongojs": "^2.3.0",
+    "object.assign": "^4.0.3",
     "restify": "^4.0.4",
-    "tingodb": "^0.4.2",
-    "grunt": "^0.4.5",
-    "underscore": "^1.8.3",
     "standard": "latest",
-    "grunt-browserify": "^4.0.1",
-    "grunt-contrib-jasmine": "^1.0.0"
+    "tingodb": "^0.4.2",
+    "underscore": "^1.8.3"
   },
   "private": false,
   "license": "Apache-2.0",
